--- a/src/schedule.html
+++ b/src/schedule.html
@@ -264,23 +264,54 @@
               >
                 <div class="accordion-body">
                   <ul class="list-group">
-                    <li
-                      class="list-group-item d-flex justify-content-between align-items-center"
-                    >
-                      Social Media Applications
-                      <span class="badge bg-primary rounded-pill">2</span>
+                    <li class="list-group-item align-items-center">
+                      <div class="row">
+                        <div class="col-3">Mon</div>
+                        <div class="col-7">
+                          Social Media Applications
+                          <hr />
+                          Authoring Principles
+                        </div>
+                        <div class="col-2">
+                          <span class="badge bg-primary rounded-pill">2</span>
+                        </div>
+                      </div>
                     </li>
-                    <li
-                      class="list-group-item d-flex justify-content-between align-items-center"
-                    >
-                      Authoring Principles
-                      <span class="badge bg-primary rounded-pill">3</span>
+                    <li class="list-group-item align-items-center">
+                      <div class="row">
+                        <div class="col-3">Tue</div>
+                        <div class="col-7">Social Media</div>
+                        <div class="col-2">
+                          <span class="badge bg-primary rounded-pill">1</span>
+                        </div>
+                      </div>
                     </li>
-                    <li
-                      class="list-group-item d-flex justify-content-between align-items-center"
-                    >
-                      Computer Science
-                      <span class="badge bg-primary rounded-pill">4</span>
+                    <li class="list-group-item align-items-center">
+                      <div class="row">
+                        <div class="col-3">Wed</div>
+                        <div class="col-7">Social Media</div>
+                        <div class="col-2">
+                          <span class="badge bg-primary rounded-pill">1</span>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="list-group-item align-items-center">
+                      <div class="row">
+                        <div class="col-3">Thu</div>
+                        <div class="col-7">Social Media</div>
+                        <div class="col-2">
+                          <span class="badge bg-primary rounded-pill">1</span>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="list-group-item align-items-center">
+                      <div class="row">
+                        <div class="col-3">Fri</div>
+                        <div class="col-7">Social Media</div>
+                        <div class="col-2">
+                          <span class="badge bg-primary rounded-pill">1</span>
+                        </div>
+                      </div>
                     </li>
                   </ul>
                 </div>
@@ -305,15 +336,7 @@
                 aria-labelledby="panelsStayOpen-headingTwo"
               >
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <strong>This is the second item's accordion body.</strong>
                 </div>
               </div>
             </div>
@@ -336,15 +359,7 @@
                 aria-labelledby="panelsStayOpen-headingThree"
               >
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <strong>This is the third item's accordion body.</strong>
                 </div>
               </div>
             </div>
@@ -367,15 +382,7 @@
                 aria-labelledby="panelsStayOpen-headingFour"
               >
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <strong>This is the third item's accordion body.</strong>
                 </div>
               </div>
             </div>
@@ -398,15 +405,7 @@
                 aria-labelledby="panelsStayOpen-headingFive"
               >
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <strong>This is the third item's accordion body.</strong>
                 </div>
               </div>
             </div>
