--- a/src/classroom.html
+++ b/src/classroom.html
@@ -75,7 +75,54 @@
         </div>
       </nav>
     </header>
-
+    <main class="mb-5 pb-5">
+      <!-- Introductory Text -->
+      <div class="container bg-primary-subtle p-3">
+        <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <p><a href="#">Classes</a></p>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+              TU294/CDM-UX/SMA
+            </li>
+          </ol>
+        </nav>
+        <h6 class="text-left">Welcome to Your Classroom</h6>
+        <button
+          type="button"
+          class="btn btn-outline-primary btn-sm"
+          data-bs-toggle="collapse"
+          data-bs-target="#students"
+        >
+          View Students &nbsp; <span class="badge bg-danger">5</span>
+        </button>
+        <div id="students" class="collapse mt-2">
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item">
+              Karan Gupta <br />
+              &nbsp; &nbsp;
+              <a href="mailto:D22124440@mytublin.ie"> D22124440@mytublin.ie</a>
+            </li>
+            <li class="list-group-item">
+              John Doe <br />
+              &nbsp; &nbsp;
+              <a href="mailto:D22124440@mytublin.ie"> D22124440@mytublin.ie</a>
+            </li>
+            <li class="list-group-item">
+              Jane Dane <br />
+              &nbsp; &nbsp;
+              <a href="mailto:D22124440@mytublin.ie"> D22124440@mytublin.ie</a>
+            </li>
+            <li class="list-group-item">
+              <a class="btn btn-success btn-sm" href="#" role="button">
+                Add Student
+              </a>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </main>
     <footer>
       <nav class="navbar fixed-bottom bg-dark-subtle">
         <div class="container-fluid justify-content-center">
