--- a/src/search.html
+++ b/src/search.html
@@ -75,7 +75,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="mb-5 pb-5">
       <div class="container">
         <div class="row bg-primary-subtle p-3">
           <div class="col">
