--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,10 @@
     />
   </head>
   <body>
+    <!--  header and footer link from external html -->
     <capacitor-welcome></capacitor-welcome>
-    <header>
+
+    <header id="header">
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <b> G</b>range<b>M</b>obile</a>
@@ -270,7 +272,7 @@
     </main>
 
     <!-- bottom navigation -->
-    <footer>
+    <footer id="footer">
       <nav class="navbar fixed-bottom bg-dark-subtle">
         <div class="container-fluid justify-content-evenly">
           <ul class="navbar-nav d-flex flex-row gap-4">
@@ -333,5 +335,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="script.js" defer></script>
   </body>
 </html>
