--- a/src/schedule.html
+++ b/src/schedule.html
@@ -23,12 +23,10 @@
     />
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <b> G</b>range<b>M</b>obile</a
-          >
+          <a class="navbar-brand" href="#"> <b> G</b>range<b>M</b>obile</a>
           <button
             title="navbar"
             class="navbar-toggler"
@@ -414,9 +412,9 @@
       </div>
     </main>
 
-    <footer>
+    <footer id="footer">
       <nav class="navbar fixed-bottom bg-dark-subtle">
-        <div class="container-fluid justify-content-center">
+        <div class="container-fluid justify-content-evenly">
           <ul class="navbar-nav d-flex flex-row gap-4">
             <li class="nav-item">
               <a class="nav-link inactive" aria-current="page" href="index.html"
@@ -471,5 +469,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="script.js" defer></script>
   </body>
 </html>
