--- a/src/classroom.html
+++ b/src/classroom.html
@@ -180,5 +180,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="script.js" defer></script>
   </body>
 </html>
